--- a/index.html
+++ b/index.html
@@ -6,30 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Saurabh</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="wrapper">
-        <div class="container">
-            <!-- navbar -->
-            <nav class="navbar">
-                <div class="logo">
-                    <p><span class="logoS">S</span>aurabh.</p>
-                </div>
-                <ul class="navlinks">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+   <div id="wrapper">
+    <div class="container">
+        <nav class="navbar">
+            <div>
+                <h1>Saurabh</h1>
+            </div>
+            <div>
+                <ul>
+                    <li>Projects</li>
+                    <li>Skills</li>
+                    <li>Contact Me</li>
                 </ul>
-            </nav>
-        </div>
-
+            </div>
+        </nav>
     </div>
+   </div>
 </body>
 
 </html>
