--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
         <nav class="navbar">
             <div>
-                <h1>Saurabh</h1>
+                <h1 class="logo">Saurabh</h1>
             </div>
             <div>
-                <ul>
+                <ul class="nav-links">
                     <li>Projects</li>
                     <li>Skills</li>
                     <li>Contact Me</li>
