--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <h1 class="logo">Saurabh</h1>
             </div>
             <div>
-                <ul class="nav-links">
-                    <li>Projects</li>
-                    <li>Skills</li>
-                    <li>Contact Me</li>
-                </ul>
+                <div class="nav-links">
+                    <li><a href="projects">Projects</a></li>
+                    <li><a href="skills">Skills</a></li>
+                    <li><a href="contact">Contact Me</a></li>
+                </div>
             </div>
         </nav>
     </div>
