--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Saurabh</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,16 +14,17 @@
 <body>
    <div id="wrapper">
     <div class="container">
+        <!-- navbar with bookmarks links -->
         <nav class="navbar">
             <div>
                 <h1 class="logo">Saurabh</h1>
             </div>
             <div>
-                <div class="nav-links">
+                <ul class="nav-links">
                     <li><a href="projects">Projects</a></li>
                     <li><a href="skills">Skills</a></li>
                     <li><a href="contact">Contact Me</a></li>
-                </div>
+                </ul>
             </div>
         </nav>
     </div>
