--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -28,42 +29,88 @@
                 </div>
             </nav>
             <!-- hero section with left content that is showing the description and image in right part -->
-        <main class="hero-section">
-            <!-- faded text  -->
-            <div class="faded-text">Saurabh</div>
-            <div class="left-hero-section">
-                <h2 class="hero-heading">Hi! Saurabh Gondane</h2>
-                <h2 class="hero-subheading">I am a <span class="role"></span></h2>
-                <p class="hero-description">I'm a Software Developer and here is my portfolio website.Here you will
-                    learn about my journey as software developer</p>
-                <div class="btn-pink" id="btn">
-                    Hire Me
+            <main class="hero-section">
+                <!-- faded text  -->
+                <div class="faded-text">Saurabh</div>
+                <div class="left-hero-section">
+                    <h2 class="hero-heading">Hi! Saurabh Gondane</h2>
+                    <h2 class="hero-subheading">I am a <span class="role"></span></h2>
+                    <p class="hero-description">I'm a Software Developer and here is my portfolio website.Here you will
+                        learn about my journey as software developer</p>
+                    <div class="btn-pink" id="btn">
+                        Hire Me
+                    </div>
                 </div>
-            </div>
-            <div class="right-hero-section">
-                <div class="absolute icons icon-dots">
-                    <img src="./assets/userAsset/dots.png" alt="">
-                </div>
-                <div class="absolute icons icon-cube">
-                    <img src="./assets/userAsset/cube.png" alt="">
-                </div>
-                <div class="absolute icons icon-circle">
-                    <img src="./assets/userAsset/circle.png" alt="">
-                </div>
+                <div class="right-hero-section">
+                    <div class="absolute icons icon-dots">
+                        <img src="./assets/userAsset/dots.png" alt="">
+                    </div>
+                    <div class="absolute icons icon-cube">
+                        <img src="./assets/userAsset/cube.png" alt="">
+                    </div>
+                    <div class="absolute icons icon-circle">
+                        <img src="./assets/userAsset/circle.png" alt="">
+                    </div>
 
-                <div class="absolute icons icon-zigzags">
-                    <img src="./assets/userAsset/zigzags.png" alt="">
+                    <div class="absolute icons icon-zigzags">
+                        <img src="./assets/userAsset/zigzags.png" alt="">
+                    </div>
+                    <div class="absolute icons icon-plus">
+                        <img src="./assets/userAsset/plus.png" alt="">
+                    </div>
+                    <div class="user-image">
+                        <img src="./assets/userAsset/saurabhProfile.jpg" alt="" width="260px" height="320px">
+                    </div>
                 </div>
-                <div class="absolute icons icon-plus">
-                    <img src="./assets/userAsset/plus.png" alt="">
-                </div>
-                <div class="user-image">
-                    <img src="./assets/userAsset/saurabhProfile.jpg" alt="" width="260px" height="320px">
+            </main>
+
+        </div>
+        <!-- It is Our Project Section where we Shows our projects  -->
+        <section class="project-section">
+            <h2 class="page-header">
+                Projects
+            </h2>
+            <div class="project-container">
+                <!--Project card 1 -->
+                <div>
+                    <div class="project-card" id="project1">
+                        <div class="project-number">01</div>
+                        <div class="project-content">
+                            <!-- all skills technologies -->
+                            <div class="project-skills-container">
+                                <img src="assets/stack/Bash.svg" alt="" class="project-skills">
+                                <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
+                                <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
+                                <img src="assets/stack/CSS.png" alt="" class="project-skills">
+                                <img src="assets/stack/Docker.svg" alt="" class="project-skills">
+                                <img src="assets/stack/Express.png" alt="" class="project-skills">
+                                <img src="assets/stack/Git.svg" alt="" class="project-skills">
+                                <img src="assets/stack/Github.svg" alt="" class="project-skills">
+                                <img src="assets/stack/Graphql.svg" alt="" class="project-skills">
+                                <img src="assets/stack/HTML.png" alt="" class="project-skills">
+                            </div>
+                            <!-- project heading -->
+                            <h2 class="project-heading">Tint & Orange</h2>
+                            <!-- project description -->
+                            <p class="project-description">It is a car modification company which provides you sheets to protect your car from scratch</p>
+                            <!-- buttons -->
+                            <div>
+                                <button class="btn-pink">read me</button>
+                                <a href="">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fa-solid fa-link"></i>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </main>
-        </div>
-        
+        </section>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
