Project Section added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -72,44 +74,145 @@
             </h2>
             <div class="project-container">
                 <!--Project card 1 -->
-                <div>
-                    <div class="project-card" id="project1">
-                        <div class="project-number">01</div>
-                        <div class="project-content">
-                            <!-- all skills technologies -->
-                            <div class="project-skills-container">
-                                <img src="assets/stack/Bash.svg" alt="" class="project-skills">
-                                <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
-                                <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
-                                <img src="assets/stack/CSS.png" alt="" class="project-skills">
-                                <img src="assets/stack/Docker.svg" alt="" class="project-skills">
-                                <img src="assets/stack/Express.png" alt="" class="project-skills">
-                                <img src="assets/stack/Git.svg" alt="" class="project-skills">
-                                <img src="assets/stack/Github.svg" alt="" class="project-skills">
-                                <img src="assets/stack/Graphql.svg" alt="" class="project-skills">
-                                <img src="assets/stack/HTML.png" alt="" class="project-skills">
-                            </div>
-                            <!-- project heading -->
-                            <h2 class="project-heading">Tint & Orange</h2>
-                            <!-- project description -->
-                            <p class="project-description">It is a car modification company which provides you sheets to protect your car from scratch</p>
-                            <!-- buttons -->
-                            <div>
-                                <button class="btn-pink">read me</button>
-                                <a href="">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                                <a href="">
-                                    <i class="fa-solid fa-link"></i>
-                                </a>
-                            </div>
-
+                <div class="project-card" id="project1">
+                    <div class="project-number project-number-right">01</div>
+                    <div class="project-content project-content-left">
+                        <!-- all skills technologies -->
+                        <div class="project-skills-container">
+                            <img src="assets/stack/Bash.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
+                            <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
+                            <img src="assets/stack/CSS.png" alt="" class="project-skills">
+                            <img src="assets/stack/Docker.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Express.png" alt="" class="project-skills">
+                            <img src="assets/stack/Git.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Github.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Graphql.svg" alt="" class="project-skills">
+                            <img src="assets/stack/HTML.png" alt="" class="project-skills">
                         </div>
-                    </div>
+                        <!-- project heading -->
+                        <h2 class="project-heading">Tint & Orange</h2>
+                        <!-- project description -->
+                        <p class="project-description">It is a car modification company which provides you sheets to
+                            protect your car from scratch</p>
+                        <!-- buttons -->
+                        <div class="btn-group">
+                            <button class="btn-pink">Read More</button>
+                            <a href="">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
 
+                    </div>
                 </div>
+                <!-- Project card 2 -->
+                <div class="project-card" id="project2">
+                    <div class="project-number project-number-left">02</div>
+                    <div class="project-content project-content-right">
+                        <!-- all skills technologies -->
+                        <div class="project-skills-container">
+                            <img src="assets/stack/HTML.png" alt="" class="project-skills">
+                            <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
+                            <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
+                            <img src="assets/stack/CSS.png" alt="" class="project-skills">
+                            <img src="assets/stack/Docker.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Express.png" alt="" class="project-skills">
+                            <img src="assets/stack/Git.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Github.svg" alt="" class="project-skills">
+                            <img src="assets/stack/K8s.svg" alt="">
+                        </div>
+                        <!-- project heading -->
+                        <h2 class="project-heading">Tint & Orange</h2>
+                        <!-- project description -->
+                        <p class="project-description">It is a car modification company which provides you sheets to
+                            protect your car from scratch</p>
+                        <!-- buttons -->
+                        <div class="btn-group">
+                            <button class="btn-pink">Read More</button>
+                            <a href="">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Project card 3 -->
+                <div class="project-card" id="project3">
+                    <div class="project-number project-number-right">03</div>
+                    <div class="project-content project-content-left">
+                        <!-- all skills technologies -->
+                        <div class="project-skills-container">
+                            <img src="assets/stack/Bash.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
+                            <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Git.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Github.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Graphql.svg" alt="" class="project-skills">
+                            <img src="assets/stack/HTML.png" alt="" class="project-skills">
+                        </div>
+                        <!-- project heading -->
+                        <h2 class="project-heading">Tint & Orange</h2>
+                        <!-- project description -->
+                        <p class="project-description">It is a car modification company which provides you sheets to
+                            protect your car from scratch</p>
+                        <!-- buttons -->
+                        <div class="btn-group">
+                            <button class="btn-pink">Read More</button>
+                            <a href="">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Project card 4 -->
+                <div class="project-card" id="project4">
+                    <div class="project-number project-number-left">04</div>
+                    <div class="project-content project-content-right">
+                        <!-- all skills technologies -->
+                        <div class="project-skills-container">
+                            <img src="assets/stack/Bash.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Bootstrap.svg" alt="" class="project-skills">
+                            <img src="assets/stack/ChartJs.svg" alt="" class="project-skills">
+                            <img src="assets/stack/CSS.png" alt="" class="project-skills">
+                            <img src="assets/stack/Docker.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Express.png" alt="" class="project-skills">
+                            <img src="assets/stack/Git.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Github.svg" alt="" class="project-skills">
+                            <img src="assets/stack/Graphql.svg" alt="" class="project-skills">
+                            <img src="assets/stack/HTML.png" alt="" class="project-skills">
+                        </div>
+                        <!-- project heading -->
+                        <h2 class="project-heading">Tint & Orange</h2>
+                        <!-- project description -->
+                        <p class="project-description">It is a car modification company which provides you sheets to
+                            protect your car from scratch</p>
+                        <!-- buttons -->
+                        <div class="btn-group">
+                            <button class="btn-pink">Read More</button>
+                            <a href="">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
-        </section>
+    </div>
+    </section>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
