Project Section added

--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
                             <img src="assets/stack/K8s.svg" alt="">
                         </div>
                         <!-- project heading -->
-                        <h2 class="project-heading">Tint & Orange</h2>
+                        <h2 class="project-heading">Breaking Copyrights</h2>
                         <!-- project description -->
-                        <p class="project-description">It is a car modification company which provides you sheets to
-                            protect your car from scratch</p>
+                        <p class="project-description">A platform to download copyrights free youtube music</p>
                         <!-- buttons -->
                         <div class="btn-group">
                             <button class="btn-pink">Read More</button>
@@ -157,10 +156,9 @@
                             <img src="assets/stack/HTML.png" alt="" class="project-skills">
                         </div>
                         <!-- project heading -->
-                        <h2 class="project-heading">Tint & Orange</h2>
+                        <h2 class="project-heading">Isha Tattva</h2>
                         <!-- project description -->
-                        <p class="project-description">It is a car modification company which provides you sheets to
-                            protect your car from scratch</p>
+                        <p class="project-description">A Website for interior designer to showcase her works and samples</p>
                         <!-- buttons -->
                         <div class="btn-group">
                             <button class="btn-pink">Read More</button>
@@ -192,10 +190,9 @@
                             <img src="assets/stack/HTML.png" alt="" class="project-skills">
                         </div>
                         <!-- project heading -->
-                        <h2 class="project-heading">Tint & Orange</h2>
+                        <h2 class="project-heading">Granit</h2>
                         <!-- project description -->
-                        <p class="project-description">It is a car modification company which provides you sheets to
-                            protect your car from scratch</p>
+                        <p class="project-description">A architectural website to plan your building or home (Hebrew Language)</p>
                         <!-- buttons -->
                         <div class="btn-group">
                             <button class="btn-pink">Read More</button>
